tests/failing/sierpinski.tail
let v6:[bool]2 = prArrB(power{[bool],[2]}(fn v4:[bool]2 => transp{[bool],[2]}(cat{[bool],[2]}(transp{[bool],[2]}(cat{[bool],[2]}(v4,reshape{[bool],[1,2]}(shape{[bool],[2]}(v4),[ff]))),transp{[bool],[2]}(cat{[bool],[2]}(v4,v4)))),5,reshape{[bool],[1,2]}([1,1],[tt]))) in
0.00
